Fix bug
Fix: Collage overlaps on article at > 1440 px vw

--- a/style.css
+++ b/style.css
@@ -247,4 +247,7 @@ Breakpoints
         flex-direction: column;
         align-items: flex-end;
     }
+    .collage{
+        padding: 50px;
+    }
 }
